--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/cyclic-software/starter-express-api#readme",
   "dependencies": {
     "aws-sdk": "^2.1427.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "firebase": "^8.6.8"
   }
